prevent layout shifts from scrollbar appearing/disappearing

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -52,6 +52,11 @@ main {
   margin-bottom: 6rem;
 }
 
+/* prevent layout shifts due to scrollbar appearing/disappearing */
+html {
+  scrollbar-gutter: stable;
+}
+
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 /*  Header                                               */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - */
